keep adding new indv exp

--- a/endnote.bib
+++ b/endnote.bib
@@ -482,3 +482,21 @@ Section: Report}
 	langid = {english},
 	keywords = {Ambiguity, Awareness, Morality, Perception, Vision}
 }
+
+@article{faul_statistical_2009,
+	title = {Statistical power analyses using G*Power 3.1: Tests for correlation and regression analyses},
+	volume = {41},
+	issn = {1554-3528},
+	url = {https://doi.org/10.3758/BRM.41.4.1149},
+	doi = {10.3758/BRM.41.4.1149},
+	shorttitle = {Statistical power analyses using G*Power 3.1},
+	abstract = {G*Power is a free power analysis program for a variety of statistical tests. We present extensions and improvements of the version introduced by Faul, Erdfelder, Lang, and Buchner (2007) in the domain of correlation and regression analyses. In the new version, we have added procedures to analyze the power of tests based on (1) single-sample tetrachoric correlations, (2) comparisons of dependent correlations, (3) bivariate linear regression, (4) multiple linear regression based on the random predictor model, (5) logistic regression, and (6) Poisson regression. We describe these new features and provide a brief introduction to their scope and handling.},
+	pages = {1149--1160},
+	number = {4},
+	journaltitle = {Behavior Research Methods},
+	shortjournal = {Behavior Research Methods},
+	author = {Faul, Franz and Erdfelder, Edgar and Buchner, Axel and Lang, Albert-Georg},
+	urldate = {2020-08-11},
+	date = {2009-11-01},
+	langid = {english}
+}
