--- a/exp3a.rmd
+++ b/exp3a.rmd
@@ -115,12 +115,12 @@ For the nonmatch trials, we didn't found any strong effect: identity, `r df3a_RT
 
 exp3a_sdt_m1 <- fun_sdt_val_id('3a')
 
-summary(exp3a_sdt_m1)    # check summary
+# summary(exp3a_sdt_m1)    # check summary
 
 # check fixed and varying effect using bayestestR
 bayestestR::describe_posterior(
   exp3a_sdt_m1,
-  effects = "all",
+  effects = "fixed",
   component = "all",
   test = c("p_direction", "p_significance"),
   centrality = "all"
@@ -128,27 +128,27 @@ bayestestR::describe_posterior(
 #pp_check(exp3a_sdt_m1)   # posterior predictive check
 
 # d-prime
-hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceGood:ismatch> IdentitySelf:ValenceNeutral:ismatch")  # 1
-hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceGood:ismatch> IdentitySelf:ValenceBad:ismatch")  # 1
-hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceNeutral:ismatch> IdentitySelf:ValenceBad:ismatch")  # .55
+hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceGood:ismatch> IdentitySelf:ValenceNeutral:ismatch")    # 1
+hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceGood:ismatch> IdentitySelf:ValenceBad:ismatch")        # 1
+hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceNeutral:ismatch> IdentitySelf:ValenceBad:ismatch")     # .55
 hypothesis(exp3a_sdt_m1, "IdentityOther:ValenceGood:ismatch> IdentityOther:ValenceNeutral:ismatch")  # .85
-hypothesis(exp3a_sdt_m1, "IdentityOther:ValenceGood:ismatch> IdentityOther:ValenceBad:ismatch ")  # .71
-hypothesis(exp3a_sdt_m1, "IdentityOther:ValenceNeutral:ismatch> IdentityOther:ValenceBad:ismatch")  # .27
+hypothesis(exp3a_sdt_m1, "IdentityOther:ValenceGood:ismatch> IdentityOther:ValenceBad:ismatch ")     # .71
+hypothesis(exp3a_sdt_m1, "IdentityOther:ValenceNeutral:ismatch> IdentityOther:ValenceBad:ismatch")   # .27
 
-hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceGood:ismatch> IdentityOther:ValenceGood:ismatch")  # .73
+hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceGood:ismatch> IdentityOther:ValenceGood:ismatch")        # .73
 hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceNeutral:ismatch> IdentityOther:ValenceNeutral:ismatch")  # .05
-hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceBad:ismatch> IdentityOther:ValenceBad:ismatch")  # .0
+hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceBad:ismatch> IdentityOther:ValenceBad:ismatch")          # .0
 
-hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceGood > IdentitySelf:ValenceNeutral")  # .73
-hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceGood > IdentitySelf:ValenceBad")  # .9
-hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceNeutral > IdentitySelf:ValenceBad")  # .49
+hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceGood > IdentitySelf:ValenceNeutral")    # .73
+hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceGood > IdentitySelf:ValenceBad")        # .9
+hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceNeutral > IdentitySelf:ValenceBad")     # .49
 hypothesis(exp3a_sdt_m1, "IdentityOther:ValenceGood > IdentityOther:ValenceNeutral")  # .68
-hypothesis(exp3a_sdt_m1, "IdentityOther:ValenceGood > IdentityOther:ValenceBad")  # .92
-hypothesis(exp3a_sdt_m1, "IdentityOther:ValenceNeutral> IdentityOther:ValenceBad")  # .8
+hypothesis(exp3a_sdt_m1, "IdentityOther:ValenceGood > IdentityOther:ValenceBad")      # .92
+hypothesis(exp3a_sdt_m1, "IdentityOther:ValenceNeutral> IdentityOther:ValenceBad")    # .8
 
-hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceGood > IdentityOther:ValenceGood")  # .92
+hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceGood > IdentityOther:ValenceGood")        # .92
 hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceNeutral > IdentityOther:ValenceNeutral")  # .76
-hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceBad > IdentityOther:ValenceBad")  # .96
+hypothesis(exp3a_sdt_m1, "IdentitySelf:ValenceBad > IdentityOther:ValenceBad")          # .96
 
 # extract the population level parameters
 # criteria
@@ -157,7 +157,7 @@ exp3a_sdt_p <- exp3a_sdt_m1 %>%
   tidybayes::gather_emmeans_draws() %>%
   dplyr::mutate(ismatch = ifelse(ismatch == 0, 'criterion', 'd prime'),
                 ismatch = factor(ismatch, levels = c('d prime', 'criterion')),
-                Valence = factor(Valence, levels = c('Bad', 'Neutral',  'Good')),
+                Valence = factor(Valence, levels = c('Good', 'Neutral',  'Bad')),
                 Identity = factor(Identity, levels = c('Self', 'Other'))) %>%
   ggplot2::ggplot(aes(x = Valence, y = .value, group = Identity, color = Identity)) +
   #ggplot2::ggplot(aes(x = Valence, y = .value, group = .draw)) +
@@ -170,7 +170,7 @@ exp3a_sdt_p <- exp3a_sdt_m1 %>%
   facet_grid(~ ismatch) +
   theme_classic()
 ```
-We found that the *d* prime is greater when shapes were associated with good self condition than with neutral self or bad self, but shapes associated with bad self and neutral self didn't show differences. comparing the self vs other under three condition revealed that shapes associated with good self is greater than with good other, but with a weak evidence. In contrast, for both neutral and bad valence condition, shapes associated with other had greater *d* prime than with self.
+We found that the *d* prime is greater when shapes were associated with good self condition than with neutral self or bad self, but shapes associated with bad self and neutral self didn't show differences. Comparing the self vs other under three condition revealed that shapes associated with good self is greater than with good other, but with a weak evidence. In contrast, for both neutral and bad valence condition, shapes associated with other had greater *d* prime than with self.
 
 ##### Reaction time
 
@@ -178,14 +178,14 @@ We found that the *d* prime is greater when shapes were associated with good sel
 exp_name <- '3a'
 exp3a_rt_m1 <- fun_rt_val_id(exp_name)
 
-summary(exp3a_rt_m1)  # n
+#summary(exp3a_rt_m1)  # n
 
 bayestestR::describe_posterior(
   exp3a_rt_m1,
-  effects = "all",
+  effects = "fixed",
   component = "all",
   test = c("p_direction", "p_significance"),
-  centrality = "all"
+  centrality = "mean"
 )
 
 #pp_check(exp3a_rt_m1)
@@ -198,7 +198,7 @@ exp3a_rt_p <- exp3a_rt_m1 %>%
   emmeans::emmeans( ~ ismatch | Identity| Valence) %>%
   tidybayes::gather_emmeans_draws() %>%
   dplyr::mutate(ismatch = ifelse(ismatch == 0, 'nonmatch', 'match'),
-              Valence = factor(Valence, levels = c('Bad', 'Neutral',  'Good')),
+              Valence = factor(Valence, levels = c('Good', 'Neutral',  'Bad')),
               Identity = factor(Identity, levels = c('Self', 'Other'))) %>%
   dplyr::rename(log_RT = .value) %>%
   ggplot2::ggplot(aes(x = Valence, y = log_RT, group = Identity, color = Identity)) +
